--- a/app/sass/_media.scss
+++ b/app/sass/_media.scss
@@ -1,13 +1,17 @@
 @import "index/index";
+@import "catalog/catalog";
 
 @media (max-width: 1200px) {
     @import "index/index-max-1200";
+    @import "catalog/catalog-max-1200";
 }
 
 @media (max-width: 991px) {
     @import "index/index-max-992";
+    @import "catalog/catalog-max-992";
 }
 
 @media (max-width: 767px) {
     @import "index/index-max-767";
+    @import "catalog/catalog-max-767";
 }
