--- a/app/sass/index/_index-max-767.scss
+++ b/app/sass/index/_index-max-767.scss
@@ -12,6 +12,7 @@ height: 300px;
 text-align:center;
 }
 .news-one-post-title-link{
+    display:inline-block;
     font-size: 25px;
 }
 .news-two-post-title-link{
@@ -110,12 +111,12 @@ margin-bottom: 5px;
         margin:0px;
     }
     &-counter{
-    width: 50%;
+    width: 100%;
     float: left;
     }
     &-data{
         margin-right:0px;
-        width: 50%;
+        width: 100%;
     }
 }
 .news-two-post{
@@ -127,8 +128,7 @@ margin-bottom: 5px;
     }
 }
 .news-two-post-data{
-    width: 50%;
-    margin:0px;
+    width: 100%;
 }
 .bg-wrapper{
     margin-top:20px;
