--- a/app/sass/index/_index.scss
+++ b/app/sass/index/_index.scss
@@ -130,6 +130,7 @@
     z-index: 1;
     margin-left: -1px;
     margin-top: -1px;
+    transition:all 300ms;
     &-likeimg{
       display: none;
     }
