--- a/app/css/main.css
+++ b/app/css/main.css
@@ -283,6 +283,8 @@
   z-index: 1;
   margin-left: -1px;
   margin-top: -1px;
+  -webkit-transition: all 300ms;
+  transition: all 300ms;
 }
 
 .shop-item-likeimg {
@@ -1680,6 +1682,10 @@ nav {
   color: white;
 }
 
+p {
+  margin: 0 0 15px;
+}
+
 .product-title {
   font-size: 60px;
   font-family: "Cassandra";
@@ -1689,6 +1695,366 @@ nav {
   font-size: 16px;
   font-family: "Philosopher";
   color: #848484;
+}
+
+.product-img {
+  text-align: center;
+  padding: 60px;
+  padding-right: 0px;
+}
+
+.img-fluid-full {
+  max-width: 93%;
+}
+
+.products-img {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.sm-info-product {
+  font-family: "Philosopher";
+  font-size: 16px;
+}
+
+.pay-product {
+  margin-top: 35px;
+  font-family: "Philosopher";
+  font-size: 60px;
+}
+
+.pay-currency {
+  margin-left: 10px;
+  font-family: "Philosopher";
+  font-size: 30px;
+}
+
+.button-for-buy-product {
+  margin-top: 35px;
+  margin-bottom: 15px;
+  font-size: 14px;
+  color: white;
+  font-family: "FuturaDemic";
+  text-transform: uppercase;
+  letter-spacing: 2.2px;
+  width: 180px;
+  height: 55px;
+  border: solid #f7ceb0;
+  background: #f7ceb0;
+  -webkit-transition: all 300ms;
+  transition: all 300ms;
+}
+
+.button-for-buy-product:focus {
+  outline: 0;
+}
+
+.button-for-buy-product:hover {
+  background: white;
+  color: #f7ceb0;
+  border: solid 1px #f7ceb0;
+}
+
+.info-product {
+  margin-top: 20px;
+  margin-bottom: 20px;
+  font-family: "Philosopher";
+  font-weight: bold;
+  font-size: 16px;
+}
+
+.info-text-product {
+  font-family: "Philosopher";
+  font-weight: lighter;
+}
+
+.box-social-links {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 45px;
+}
+
+.social-links {
+  margin-left: 5px;
+  margin-right: 5px;
+  display: block;
+  width: 40px;
+  height: 40px;
+  padding: 8px;
+  text-align: center;
+  -webkit-border-radius: 50%;
+          border-radius: 50%;
+  border: lightgrey solid 1px;
+  font-size: 18px;
+  color: black;
+  -webkit-transition: all 300ms;
+  transition: all 300ms;
+}
+
+.social-links:hover {
+  border: #f7ceb0 solid 1px;
+  color: #f7ceb0;
+  -webkit-transform: rotate(360deg);
+      -ms-transform: rotate(360deg);
+          transform: rotate(360deg);
+}
+
+.share-social-links {
+  margin-top: 40px;
+  font-size: 16px;
+  font-family: "FuturaDemic";
+}
+
+.box-discounts {
+  margin-top: 65px;
+  text-align: center;
+  font-family: "Philosopher";
+}
+
+.name-discounts {
+  font-family: "FuturaDemic";
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.discount {
+  margin-top: 20px;
+  margin-bottom: 15px;
+  font-size: 16px;
+  font-family: "Philosopher";
+  text-align: left;
+}
+
+.features-boximg {
+  text-align: center;
+}
+
+.features-title {
+  font-family: "Philosopher";
+  font-size: 18px;
+  text-align: center;
+}
+
+.features-pg {
+  font-family: "FuturaDemic";
+  font-size: 16px;
+  padding-left: 80px;
+}
+
+.features-pg-info {
+  font-family: "Philosopher";
+}
+
+.features-pg-info-word {
+  font-family: "Philosopher";
+  font-size: 16px;
+  color: #f7ceb0;
+}
+
+.features-pay {
+  margin-top: 50px;
+}
+
+.features-exchange {
+  margin-top: 50px;
+}
+
+.title-ch-product {
+  font-family: "FuturaDemic";
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  font-size: 14px;
+  margin-bottom: 30px;
+  text-align: center;
+}
+
+.character-product {
+  padding: 25px 40px;
+  padding-bottom: 15px;
+  border-top: solid 1px lightgrey;
+  border-bottom: solid 1px lightgrey;
+}
+
+.column-pg {
+  font-family: "Philosopher";
+  font-size: 16px;
+}
+
+.column-pg-t {
+  font-family: "FuturaDemic";
+  font-size: 16px;
+  font-weight: bold;
+}
+
+.txt-p-character {
+  font-family: "Philosopher";
+  font-size: 16px;
+  margin: 0px;
+  padding: 25px;
+}
+
+.title-rw-product {
+  font-family: "FuturaDemic";
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  font-size: 14px;
+  margin-bottom: 30px;
+  text-align: center;
+}
+
+.txt-reviwes {
+  font-family: "Philosopher";
+  font-size: 16px;
+}
+
+.name-rw {
+  font-family: "FuturaDemic";
+  font-size: 18px;
+  margin-bottom: 30px;
+}
+
+.data-rw {
+  margin-left: 15px;
+  font-family: "FuturaDemic";
+}
+
+.wrapper-reviwes {
+  border-bottom: solid 1px lightgrey;
+}
+
+.add-reviwes {
+  text-align: center;
+}
+
+.add-reviwes-title {
+  font-family: "FuturaDemic";
+}
+
+.add-reviwes-form {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.add-reviwes-box-name-email {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  margin: 30px 0px;
+}
+
+.add-reviwes-txt-product {
+  margin-top: 10px;
+  width: 100%;
+  height: 160px;
+  border: solid 1px lightgrey;
+  color: grey;
+  padding: 15px;
+  padding-bottom: 15%;
+  font-family: "Philosopher";
+  color: lightgrey;
+  font-size: 16px;
+}
+
+.add-reviwes-txt-product:focus {
+  outline: 0;
+  border: solid 1px #f7ceb0;
+  color: black;
+}
+
+.add-reviwes-txt-name {
+  width: 47%;
+  margin-right: 3%;
+  height: 60px;
+  border: solid 1px lightgrey;
+  padding: 15px;
+  font-family: "Philosopher";
+  color: lightgrey;
+  font-size: 16px;
+}
+
+.add-reviwes-txt-name:focus {
+  outline: 0;
+  border: solid 1px #f7ceb0;
+  color: black;
+}
+
+.add-reviwes-txt-email {
+  margin-left: 3%;
+  width: 47%;
+  height: 60px;
+  border: solid 1px lightgrey;
+  padding: 15px;
+  font-family: "Philosopher";
+  color: lightgrey;
+  font-size: 16px;
+}
+
+.add-reviwes-txt-email:focus {
+  outline: 0;
+  border: solid 1px #f7ceb0;
+  color: black;
+}
+
+.add-reviwes-send {
+  width: 30%;
+  height: 60px;
+  background: #f7ceb0;
+  border: solid 1px #f7ceb0;
+  text-transform: uppercase;
+  color: white;
+  font-family: "FuturaDemic";
+  letter-spacing: 2px;
+  -webkit-transition: all 300ms;
+  transition: all 300ms;
+}
+
+.add-reviwes-send:focus {
+  outline: 0;
+}
+
+.add-reviwes-send:hover {
+  background: white;
+  color: #f7ceb0;
+}
+
+.related-products {
+  margin: 30px 0px;
+}
+
+.related-products-title {
+  font-size: 60px;
+  font-family: "Cassandra";
+  text-align: center;
+  margin-bottom: 30px;
 }
 
 @media (max-width: 1200px) {
@@ -1802,6 +2168,52 @@ nav {
     padding: 0px;
     padding-left: 10px;
     font-size: 14px;
+  }
+  .pay-product {
+    margin: 0px;
+  }
+  .button-for-buy-product {
+    margin: 0px;
+  }
+  .features-pg {
+    padding-left: 25px;
+  }
+  .box-discounts {
+    margin-top: 15px;
+  }
+  .social-links {
+    width: 30px;
+    height: 30px;
+    padding: 3px;
+  }
+  .features-pay {
+    margin-top: 20px;
+  }
+  .features-exchange {
+    margin-top: 20px;
+  }
+  .discount {
+    margin-top: 10px;
+    margin-bottom: 5px;
+    font-size: 15px;
+  }
+  .character-product {
+    padding: 15px 20px;
+  }
+  .name-rw {
+    margin-bottom: 15px;
+  }
+  .add-reviwes-box-name-email {
+    margin: 15px 0px;
+  }
+  .add-reviwes-send {
+    width: 45%;
+  }
+  .txt-p-character {
+    padding: 15px;
+  }
+  .add-reviwes-txt-product {
+    padding-bottom: 20%;
   }
 }
 
@@ -2075,6 +2487,75 @@ nav {
     display: flex;
     width: 50%;
   }
+  .box-info-product {
+    text-align: center;
+  }
+  .box-social-links {
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .discount {
+    text-align: center;
+  }
+  .box-discounts {
+    margin-bottom: 50px;
+  }
+  .features-pg {
+    padding: 10px;
+    text-align: center;
+  }
+  .features-pay {
+    margin-top: 30px;
+  }
+  .box-character {
+    margin-top: 30px;
+    border-top: solid 1px lightgrey;
+  }
+  .title-ch-product {
+    margin: 0px;
+    padding: 15px;
+  }
+  .txt-p-character {
+    padding: 10px;
+  }
+  .title-rw-product {
+    margin: 0px;
+    padding: 15px;
+    border-top: solid 1px lightgrey;
+    border-bottom: solid 1px lightgrey;
+  }
+  .txt-reviwes {
+    padding: 10px;
+    margin: 0px;
+  }
+  .name-rw {
+    padding: 10px;
+    margin-bottom: 0px;
+  }
+  .add-reviwes-txt-product {
+    padding-bottom: 15%;
+  }
+  .add-reviwes-box-name-email {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    margin: 10px 0px;
+  }
+  .add-reviwes-txt-name {
+    width: 100%;
+    margin: 10px 0;
+  }
+  .add-reviwes-txt-email {
+    width: 100%;
+    margin: 0px;
+  }
+  .add-reviwes-send {
+    width: 100%;
+  }
 }
 
 @media (max-width: 767px) {
@@ -2332,6 +2813,75 @@ nav {
     display: -ms-flexbox;
     display: flex;
     width: 50%;
+  }
+  .box-info-product {
+    text-align: center;
+  }
+  .box-social-links {
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .discount {
+    text-align: center;
+  }
+  .box-discounts {
+    margin-bottom: 50px;
+  }
+  .features-pg {
+    padding: 10px;
+    text-align: center;
+  }
+  .features-pay {
+    margin-top: 30px;
+  }
+  .box-character {
+    margin-top: 30px;
+    border-top: solid 1px lightgrey;
+  }
+  .title-ch-product {
+    margin: 0px;
+    padding: 15px;
+  }
+  .txt-p-character {
+    padding: 10px;
+  }
+  .title-rw-product {
+    margin: 0px;
+    padding: 15px;
+    border-top: solid 1px lightgrey;
+    border-bottom: solid 1px lightgrey;
+  }
+  .txt-reviwes {
+    padding: 10px;
+    margin: 0px;
+  }
+  .name-rw {
+    padding: 10px;
+    margin-bottom: 0px;
+  }
+  .add-reviwes-txt-product {
+    padding-bottom: 25%;
+  }
+  .add-reviwes-box-name-email {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    margin: 10px 0px;
+  }
+  .add-reviwes-txt-name {
+    width: 100%;
+    margin: 10px 0;
+  }
+  .add-reviwes-txt-email {
+    width: 100%;
+    margin: 0px;
+  }
+  .add-reviwes-send {
+    width: 100%;
   }
 }
 
